7181989: NMT ON: Assertion failure when NMT checks thread's native stack base address

Assertion on stack base is not necessary

Reviewed-by: coleenp, dholmes, kvn